--- a/open_api_practice/Base.lproj/Main.storyboard
+++ b/open_api_practice/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2FX-xS-KWi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XO2-eI-jOu">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -18,8 +18,6 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="separatorColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="sectionIndexBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="playlist" rowHeight="165" id="Ak1-Qa-gb1" customClass="playlistTableViewCell" customModule="open_api_practice" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="165"/>
@@ -104,6 +102,73 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yN7-Ak-TzQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="133.59999999999999" y="-565.36731634182911"/>
+        </scene>
+        <!--Song Track Table View Controller-->
+        <scene sceneID="jjX-Wo-t0m">
+            <objects>
+                <tableViewController id="XO2-eI-jOu" userLabel="Song Track Table View Controller" customClass="songTrackTableViewController" customModule="open_api_practice" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Lbn-nl-qfi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="songTrack" rowHeight="95" id="puz-ac-cfN" customClass="songTrackTableViewCell" customModule="open_api_practice" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="95"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="puz-ac-cfN" id="wT6-kl-rD4">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="94.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="歌曲名稱" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oS0-AJ-MVN">
+                                            <rect key="frame" x="107" y="26.5" width="256" height="23"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="歌手名稱" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JbS-ch-Z3h">
+                                            <rect key="frame" x="107" y="64.5" width="248" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="playlist_default" translatesAutoresizingMaskIntoConstraints="NO" id="GgT-CS-Rm0">
+                                            <rect key="frame" x="9" y="11" width="72" height="72"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="72" id="OVG-v5-jdD"/>
+                                                <constraint firstAttribute="width" constant="72" id="Pf4-Fy-Siu"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="JbS-ch-Z3h" secondAttribute="trailing" constant="4" id="3HK-Xv-cmf"/>
+                                        <constraint firstItem="GgT-CS-Rm0" firstAttribute="leading" secondItem="wT6-kl-rD4" secondAttribute="leadingMargin" constant="4" id="4WM-q7-Qp9"/>
+                                        <constraint firstItem="oS0-AJ-MVN" firstAttribute="trailing" secondItem="wT6-kl-rD4" secondAttribute="trailingMargin" constant="4" id="4Xx-W6-rne"/>
+                                        <constraint firstItem="JbS-ch-Z3h" firstAttribute="leading" secondItem="GgT-CS-Rm0" secondAttribute="trailing" constant="15" id="71O-bW-uvO"/>
+                                        <constraint firstItem="oS0-AJ-MVN" firstAttribute="leading" secondItem="GgT-CS-Rm0" secondAttribute="trailing" constant="15" id="VOJ-1l-dNs"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="GgT-CS-Rm0" secondAttribute="bottom" constant="4" id="f8b-rn-2Th"/>
+                                        <constraint firstItem="GgT-CS-Rm0" firstAttribute="top" secondItem="wT6-kl-rD4" secondAttribute="topMargin" constant="4" id="jjG-Ox-Pum"/>
+                                        <constraint firstItem="JbS-ch-Z3h" firstAttribute="top" secondItem="oS0-AJ-MVN" secondAttribute="bottom" constant="15" id="pRd-wE-Lwg"/>
+                                        <constraint firstItem="oS0-AJ-MVN" firstAttribute="top" secondItem="wT6-kl-rD4" secondAttribute="topMargin" constant="15" id="prj-xc-k4P"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="JbS-ch-Z3h" secondAttribute="bottom" constant="15" id="uJ1-lm-hae"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="artistName" destination="JbS-ch-Z3h" id="Lpa-vw-Esd"/>
+                                    <outlet property="songImage" destination="GgT-CS-Rm0" id="RqC-dV-dZw"/>
+                                    <outlet property="songName" destination="oS0-AJ-MVN" id="rIO-15-IKv"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="XO2-eI-jOu" id="c1e-8S-4CN"/>
+                            <outlet property="delegate" destination="XO2-eI-jOu" id="48v-pD-Dnc"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qGf-ua-THT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="132" y="93.103448275862078"/>
         </scene>
     </scenes>
     <resources>
