--- a/open_api_practice/Base.lproj/Main.storyboard
+++ b/open_api_practice/Base.lproj/Main.storyboard
@@ -102,7 +102,7 @@
                                             <outlet property="curatorName" destination="08q-6c-8Nl" id="d06-uC-tcc"/>
                                             <outlet property="playlistImage" destination="yiz-Kf-qEv" id="TfT-sN-IMD"/>
                                             <outlet property="playlistName" destination="Omf-lm-z6s" id="vWM-pL-WQy"/>
-                                            <segue destination="XO2-eI-jOu" kind="show" id="JFX-IM-M81"/>
+                                            <segue destination="XO2-eI-jOu" kind="show" identifier="playlistMore" id="JFX-IM-M81"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -298,7 +298,6 @@
         <!--Navigation Controller-->
         <scene sceneID="7Ta-fx-EMn">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cYB-06-J8U" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="WQN-B5-coy" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="itG-kr-hXO">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -308,6 +307,7 @@
                         <segue destination="TY9-Az-QGB" kind="relationship" relationship="rootViewController" id="cDb-ka-dYb"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cYB-06-J8U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2206" y="-553"/>
         </scene>
