--- a/open_api_practice/Base.lproj/Main.storyboard
+++ b/open_api_practice/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home-->
         <scene sceneID="t01-UC-uR0">
             <objects>
                 <viewController id="TY9-Az-QGB" customClass="ViewController" customModule="open_api_practice" customModuleProvider="target" sceneMemberID="viewController">
@@ -123,7 +123,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bsl-hU-Rjb"/>
                     </view>
-                    <navigationItem key="navigationItem" id="VWc-fA-3LK"/>
+                    <navigationItem key="navigationItem" title="Home" id="VWc-fA-3LK"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BlV-f4-eBM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
