--- a/open_api_practice/Base.lproj/Main.storyboard
+++ b/open_api_practice/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Home-->
         <scene sceneID="t01-UC-uR0">
             <objects>
-                <viewController id="TY9-Az-QGB" customClass="ViewController" customModule="open_api_practice" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="TY9-Az-QGB" customClass="HomePageViewController" customModule="open_api_practice" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="t4R-hp-Sue">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
