--- a/open_api_practice/Base.lproj/Main.storyboard
+++ b/open_api_practice/Base.lproj/Main.storyboard
@@ -18,12 +18,69 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="grouped" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aKP-9T-spy">
-                                <rect key="frame" x="3" y="74" width="369" height="593"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" dataMode="prototypes" prefetchingEnabled="NO" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mnA-Sz-4Dz">
+                                <rect key="frame" x="3" y="68" width="369" height="213"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="369" id="LSc-Xo-sZh"/>
-                                    <constraint firstAttribute="width" constant="369" id="ThC-1Y-Ssi"/>
+                                    <constraint firstAttribute="height" constant="213" id="fVn-nW-PUj"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Rgz-ih-8YI">
+                                    <size key="itemSize" width="163" height="194"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="album" id="2c9-VH-Z8k" customClass="AlbumCollectionViewCell" customModule="open_api_practice" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="9.5" width="163" height="194"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="163" height="194"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="album_default" translatesAutoresizingMaskIntoConstraints="NO" id="jCa-LM-BHy" userLabel="Album Image">
+                                                    <rect key="frame" x="20" y="11" width="123" height="123"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="jCa-LM-BHy" secondAttribute="height" multiplier="1:1" id="THY-oO-Too"/>
+                                                        <constraint firstAttribute="height" constant="123" id="bIX-WK-JsX"/>
+                                                        <constraint firstAttribute="width" constant="123" id="vtN-63-7HV"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="專輯名稱" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cBP-BQ-9At" userLabel="Album Name">
+                                                    <rect key="frame" x="23" y="154" width="116" height="29"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="playlist_name"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="cBP-BQ-9At" firstAttribute="leading" secondItem="2c9-VH-Z8k" secondAttribute="leadingMargin" constant="15" id="J5g-ya-w9P"/>
+                                            <constraint firstItem="jCa-LM-BHy" firstAttribute="top" secondItem="2c9-VH-Z8k" secondAttribute="top" constant="11" id="Jb9-jH-OC8"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="cBP-BQ-9At" secondAttribute="bottom" constant="3" id="OGv-ax-6kW"/>
+                                            <constraint firstItem="cBP-BQ-9At" firstAttribute="top" secondItem="jCa-LM-BHy" secondAttribute="bottom" constant="20" id="WyI-J3-Jfe"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="cBP-BQ-9At" secondAttribute="trailing" constant="16" id="sVU-5L-go5"/>
+                                            <constraint firstItem="jCa-LM-BHy" firstAttribute="leading" secondItem="2c9-VH-Z8k" secondAttribute="leading" constant="20" id="zBT-qe-Rda"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="new_album"/>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="albumImage" destination="jCa-LM-BHy" id="THn-52-pvB"/>
+                                            <outlet property="albumName" destination="cBP-BQ-9At" id="Nyv-0E-rf6"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="grouped" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aKP-9T-spy">
+                                <rect key="frame" x="3" y="275" width="369" height="392"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="369" id="slS-TC-BMf"/>
                                 </constraints>
                                 <color key="separatorColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -116,15 +173,19 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="bsl-hU-Rjb" firstAttribute="trailing" secondItem="aKP-9T-spy" secondAttribute="trailing" constant="3" id="E3h-p2-MfW"/>
-                            <constraint firstItem="aKP-9T-spy" firstAttribute="bottom" secondItem="bsl-hU-Rjb" secondAttribute="bottom" id="qFJ-ne-5kD"/>
-                            <constraint firstItem="aKP-9T-spy" firstAttribute="leading" secondItem="bsl-hU-Rjb" secondAttribute="leading" constant="3" id="stN-SG-I4y"/>
-                            <constraint firstItem="aKP-9T-spy" firstAttribute="top" secondItem="bsl-hU-Rjb" secondAttribute="top" constant="10" id="zgb-LH-DIl"/>
+                            <constraint firstItem="mnA-Sz-4Dz" firstAttribute="leading" secondItem="bsl-hU-Rjb" secondAttribute="leading" constant="3" id="Jn1-o8-NJT"/>
+                            <constraint firstItem="aKP-9T-spy" firstAttribute="top" secondItem="bsl-hU-Rjb" secondAttribute="top" constant="211" id="Lgh-3O-ewv"/>
+                            <constraint firstItem="aKP-9T-spy" firstAttribute="bottom" secondItem="bsl-hU-Rjb" secondAttribute="bottom" id="d3W-xU-bGd"/>
+                            <constraint firstItem="mnA-Sz-4Dz" firstAttribute="top" secondItem="bsl-hU-Rjb" secondAttribute="top" constant="4" id="fok-CQ-dnv"/>
+                            <constraint firstItem="bsl-hU-Rjb" firstAttribute="trailing" secondItem="aKP-9T-spy" secondAttribute="trailing" constant="3" id="idw-Gv-y1F"/>
+                            <constraint firstItem="aKP-9T-spy" firstAttribute="leading" secondItem="bsl-hU-Rjb" secondAttribute="leading" constant="3" id="tAJ-GY-VxT"/>
+                            <constraint firstItem="bsl-hU-Rjb" firstAttribute="trailing" secondItem="mnA-Sz-4Dz" secondAttribute="trailing" constant="3" id="zdp-LS-t8K"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bsl-hU-Rjb"/>
                     </view>
                     <navigationItem key="navigationItem" title="Home" id="VWc-fA-3LK"/>
                     <connections>
+                        <outlet property="newAlbumCollectionView" destination="mnA-Sz-4Dz" id="bXn-YR-lYN"/>
                         <outlet property="newHitsPlaylistTableView" destination="aKP-9T-spy" id="GpL-Lc-CO0"/>
                     </connections>
                 </viewController>
@@ -220,6 +281,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="album_default" width="225" height="225"/>
         <image name="curator_default" width="225" height="225"/>
         <image name="playlist_default" width="225" height="225"/>
     </resources>
